# rust-vault

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  main.rs  vault.rs
