[package]
name = "rust-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
# For secure key generation and handling
argon2 = "0.5.3"
zeroize = { version = "1.8.2", features = ["derive"] }
clap = { version = "4.4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }


[profile.dev]
incremental = false
